try git commands

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </div>
     </div>
 
+    <!-- git try kr rha hu -->
+
     <!-- Quiz Box -->
     <div class="quiz_box">
         <header>
